# esp32-homecontrol-no-std-rs

./: .env.dist  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  HARDWARE_V2.md  README.md  USER_STORIES.md  edit.sh  run.sh
.cargo/: config.toml
.claude/skills/esp32-rust-embedded/: SKILL.md
.github/workflows/: rust_ci.yml
doc/: test-protocol.md
src/: clock.rs  config.rs  dht11.rs  display.rs  domain.rs  main.rs  mqtt.rs  ntp.rs  pump.rs  relay_task.rs  rtc_memory.rs  sensors_task.rs  sleep.rs  update_task.rs  wifi.rs
src/sensors/: adc.rs  builder.rs  hardware.rs  mod.rs
