[package]
name = "esp32-homecontrol"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.16.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "1.0.0-beta.1", features = ["esp32s3", "unstable"] }
esp-alloc = { version = "0.8.0" }
embassy-net = { version = "0.7.0", features = [
    "tcp",
    "udp",
    "dns",
    "dhcpv4",
    "dhcpv4-hostname",
] }
mipidsi = { version = "0.9.0" }
esp-wifi = { version = "0.14.0", features = ["esp32s3", "serde", "wifi"] }
heapless = { version = "0.8.0", default-features = false }
esp-println = { version = "0.14.0", features = ["esp32s3"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-163840"] }
embassy-time = { version = "0.4.0", features = [] }
esp-hal-embassy = { version = "0.8.0", features = ["esp32s3"] }
rust-mqtt = { version = "0.3.0", default-features = false, features = [] }
embedded-text = "0.7.2"
embedded-graphics = { version = "0.8.1", features = [] }
embedded-hal = { version = "1.0.0", features = [] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false, features = [
    "alloc",
] }
embassy-futures = { version = "0.1.1", features = [] }
embassy-sync = { version = "0.7.0", features = [] }
static_cell = "2.1.0"
nb = { version = "1.1.0", features = [] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
