[package]
name = "esp32-homecontrol"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.17.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "1.0.0-rc.0", features = [
    "esp32s3",
    "unstable",
    "log-04",
] }
esp-alloc = { version = "0.8.0" }
embassy-net = { version = "0.7.1", features = [
    "tcp",
    "udp",
    "dns",
    "dhcpv4",
    "dhcpv4-hostname",
] }
mipidsi = { version = "0.9.0" }
esp-wifi = { version = "0.15.0", features = ["esp32s3", "serde", "wifi"] }
heapless = { version = "0.8.0", default-features = false }
esp-println = { version = "0.15.0", features = ["esp32s3", "log-04"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-163840"] }
embassy-time = { version = "0.5.0", features = [] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32s3", "log-04"] }
rust-mqtt = { version = "0.3.0", default-features = false, features = [] }
embedded-text = "0.7.2"
embedded-graphics = { version = "0.8.1", features = [] }
embedded-hal = { version = "1.0.0", features = [] }
serde = { version = "1.0.227", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false, features = [
    "alloc",
] }
embassy-futures = { version = "0.1.2", features = [] }
embassy-sync = { version = "0.7.2", features = [] }
static_cell = "2.1.1"
nb = { version = "1.1.0", features = [] }
log = "0.4.28"
strum = { version = "0.27.2", default-features = false }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["log-04", "esp32s3"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
