[package]
name = "esp32-homecontrol"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32s3", "log-04", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
    "embassy",
    "esp-alloc",
    "esp-radio",
    "esp32s3",
    "log-04",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
log = "0.4.27"

embassy-net = { version = "0.7.1", features = [
    "dhcpv4",
    "log",
    "medium-ethernet",
    "tcp",
    "udp",
    "dns",
] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
esp-radio = { version = "0.17.0", features = [
    "esp-alloc",
    "esp32s3",
    "log-04",
    "smoltcp",
    "unstable",
    "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "log",
    "medium-ethernet",
    "multicast",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }

critical-section = "1.2.0"
static_cell = "2.1.1"

mipidsi = { version = "0.9.0" }
heapless = { version = "0.9.1", default-features = false }
rust-mqtt = { version = "0.3.0", default-features = false, features = [] }
embedded-text = "0.7.3"
embedded-graphics = { version = "0.8.1", features = [] }
embedded-hal = { version = "1.0.0", features = [] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false, features = [
    "alloc",
] }
embassy-futures = { version = "0.1.2", features = [] }
embassy-sync = { version = "0.7.2", features = [] }
nb = { version = "1.1.0", features = [] }
strum = { version = "0.27.2", default-features = false }
esp-phy = { version = "0.1.1", features = ["esp32s3", "log-04"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
